--- a/css/transportes.css
+++ b/css/transportes.css
@@ -1,135 +1,160 @@
-body{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-header{
-    background-color: #2e64a1;
-    padding: 1em 0;
-}
-
-header h1{
-    color: white;
-    font-size: 2.5em;
-    font-style: italic;
-    font-weight: 100;
-    display: inline-block;
-    position: relative;
-    bottom: 30px;
-}
-
-nav{
-    background-color: #6da9ed;
-    margin-bottom: 2em;
-}
-
-nav ul{
-    list-style: none;
-    margin: 0;
+* {
     padding: 0;
-
-}
-
-nav ul li{
-    display: inline-block;
-    width: 16.3%;
-}
-
-nav ul li a{
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    display: block;
-    padding: 0.2em 0.4em;
-
-}
-
-nav ul li a:hover{
-    background-color: rgba(0,0,0,0.3);
-}
-
-footer{
-    background-color: #ccc;
-    clear: both;
-    color: #333;
-    padding: 3em 0;
-    margin-top: 2em;
-    text-align: center;
-}
-
-nav ul li a.activo{
-    background-color: #4c76a5;
-}
-
-.holder{
-    width: 960px;
-    margin: 0 auto;
-}
-
-h2{
-    color: #2e64a1;
-    font-weight: 400;
-    margin: 0 0 1em;
-}
-
-.left{
-    float: left;
-}
-
-.right{
-    float: right;
-}
-
-.homeimg{
-    margin-bottom: 1.5em;
-}
-
-.columnas{
-    overflow: hidden;
-}
-
-.bienvenidos, .testimonios{
+    margin: 0;
     box-sizing: border-box;
 }
 
-.bienvenidos{
-    width: 75%;
-    padding-right: 2em;
+/* html {
+    box-sizing: border-box;
+    font-size: 62.5%;  /*1 rem = 10px*/
+
+
+
+
+/* *, *:before, *:after {
+    box-sizing: inherit;  /*hereda las propiedades de su padre*/
+
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
 }
 
-.testimonios{
-    width: 25%;
+.logo {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    background-color: #2e64a1;
 }
 
-.testimonio{
-    background-color: #ccc;
-    padding: 1em;
+.logo img {
+    max-height: 10%;
+    max-width: 10%;
 }
 
-.testimonio .cita{
-    font-weight: bold;
-    font-style: italic;
-    font-size: 1.4em;
-    display: block;
-}
-
-.testimonio .autor{
-    font-size: 0.7em;
+.logo h1 {
+    display: flex;
     text-align: center;
-    margin: 1em 0;
-    display: block;
+    justify-content: center;
+
 }
 
-.historia p{
+.navbar-nav-custom .nav-link {
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 767px) {
+    .navbar-nav-custom .nav-link {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+}
+
+#navbarSupportedContent {
+    display: flex;
+    justify-content: center;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.imagen-container {
+    display: flex;
+    justify-content: center;
+}
+
+.imagen-container img {
+    width: 100%;
+    height: auto;
+}
+
+.columnas {
+    display: flex;
+    text-align: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+
+.testimonios-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 0.5rem;
+    background-color: #999;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+
+
+.bienvenidos-left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 0.5rem;
+    background-color: #999;
+    flex-wrap: wrap;
+}
+
+.historia {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.personas {
+    display: flex;
+    justify-content: center;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #2e64a1;
+    width: 100%;
+    height: 100%;
+}
+.historia{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: #999;
+}
+h2{
+    color: #2e64a1;
+}
+
+.historia p {
     font-size: 0.8em;
 }
 
-.personas{
+.personas {
     overflow: hidden;
 }
 
-.persona{
+.persona {
     width: 18%;
     border: 1px solid gray;
     border-radius: 0.25em;
@@ -138,45 +163,56 @@ h2{
     box-sizing: border-box;
 }
 
+.novedades{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #999;
+}
+
+
+
+
 .persona {
     text-align: center;
 }
 
-.persona img{
+.persona img {
     border-radius: 50%;
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     margin: 0.8em 0 1em;
     max-width: 70%;
 }
 
 .persona h5,
-.persona h6{
+.persona h6 {
     text-align: center;
     font-weight: normal;
     color: #2e64a1;
     margin: 0;
 }
 
-.persona h5{
+.persona h5 {
     font-size: 0.9em;
 }
 
-.persona h6{
+.persona h6 {
     font-size: 0.8em;
     font-style: italic;
 }
 
-.persona p{
+.persona p {
     font-size: 0.7em;
     color: #444;
     margin: 0 1em 1em;
 }
 
-.persona:first-child{
+.persona:first-child {
     margin-left: 0;
 }
 
-.servicio{
+.servicio {
     border: 1px solid gray;
     border-radius: 0.7em;
     margin: 1em 0;
@@ -184,11 +220,11 @@ h2{
     overflow: hidden;
 }
 
-.servicio .info{
+.servicio .info {
     width: 75%;
 }
 
-.servicio .info h4{
+.servicio .info h4 {
     color: #2e64a1;
     font-size: 1.2em;
     font-style: italic;
@@ -199,99 +235,108 @@ h2{
 
 }
 
-.servicio .info p{
+.servicio .info p {
     font-size: 0.8em;
     line-height: 1.2em;
 }
 
-.servicio img{
+.servicio img {
     border-radius: 0.8em;
 }
 
-.servicio:nth-child(even) img{
+.servicio:nth-child(even) img {
     float: right;
     margin: 0 0 0 1em;
 }
 
-.servicio:nth-child(even) .info{
+.servicio:nth-child(even) .info {
     float: left;
 }
 
-.servicio:nth-child(odd) img{
+.servicio:nth-child(odd) img {
     float: left;
     margin: 0 1em 0 0;
 }
 
-.servicio:nth-child(odd) .info{
+.servicio:nth-child(odd) .info {
     float: right;
 }
 
-.galeria .foto{
+.galeria{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+}
+
+.galeria .foto {
     float: left;
-    width: 18%;
+    width: 100%;
     margin: 1em 0 1em 2.5%;
     border: 1px solid #ddd;
     padding: 0.3em;
-    box-sizing: border-box;
+    
 }
 
-.galeria .foto img{
+.galeria .foto img {
     width: 100%;
-    display: block;
+    display: flex;
+    
 }
 
-.galeria .foto:nth-child(5n+1){
+.galeria .foto:nth-child(5n+1) {
     margin-left: 0;
 }
 
-.columna{
+.columna {
     width: 50%;
     box-sizing: border-box;
     padding: 0.6em;
 }
 
-.columna.left{
+.columna.left {
     border-right: 1px solid gray;
 }
 
-.columna.right p{
+.columna.right p {
     font-size: 0.9em;
 }
 
-.columna.right ul li{
+.columna.right ul li {
     font-size: 0.8em;
 }
 
-.formulario label{
+.formulario label {
     vertical-align: top;
     width: 20%;
     display: inline-block;
 }
 
 .formulario input,
-.formulario textarea{
+.formulario textarea {
     background-color: #ddd;
     border-radius: 5px;
     border: 1px solid #999;
     padding: 0.4em 0.6em;
     font-size: 0.8em;
     width: 70%;
-} 
+}
 
-.formulario input[type="submit"]{
+.formulario input[type="submit"] {
     background-color: #6da9ed;
-    box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     color: white;
     font-size: 1em;
     width: auto;
     cursor: pointer;
 }
 
-.formulario textarea{
+.formulario textarea {
     height: 10em;
     resize: none;
 }
 
-.formulario .acciones{
+.formulario .acciones {
     text-align: center;
 }
